chore(config): externalize CORS settings to application properties via CorsProperties