@@ -33,6 +33,7 @@ public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthFilter;
     private final UserDetailsService userDetailsService;
+    private final CorsProperties corsProperties;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -74,12 +75,38 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:5173"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept"));
-        configuration.setExposedHeaders(List.of("Authorization"));
-        configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
+
+        // Defaults in case properties not set
+        List<String> allowedOrigins = corsProperties.getAllowedOrigins() != null
+                ? corsProperties.getAllowedOrigins()
+                : List.of("http://localhost:3000", "http://localhost:5173");
+
+        List<String> allowedMethods = corsProperties.getAllowedMethods() != null
+                ? corsProperties.getAllowedMethods()
+                : Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS");
+
+        List<String> allowedHeaders = corsProperties.getAllowedHeaders() != null
+                ? corsProperties.getAllowedHeaders()
+                : Arrays.asList("Authorization", "Content-Type", "Accept");
+
+        List<String> exposedHeaders = corsProperties.getExposedHeaders() != null
+                ? corsProperties.getExposedHeaders()
+                : List.of("Authorization");
+
+        Boolean allowCredentials = corsProperties.getAllowCredentials() != null
+                ? corsProperties.getAllowCredentials()
+                : true;
+
+        Long maxAge = corsProperties.getMaxAge() != null
+                ? corsProperties.getMaxAge()
+                : 3600L;
+
+        configuration.setAllowedOrigins(allowedOrigins);
+        configuration.setAllowedMethods(allowedMethods);
+        configuration.setAllowedHeaders(allowedHeaders);
+        configuration.setExposedHeaders(exposedHeaders);
+        configuration.setAllowCredentials(allowCredentials);
+        configuration.setMaxAge(maxAge);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
